@@ -224,37 +224,28 @@ Where tests must make use of external resources or ensure that other tests
 have already been run before they are run, you can make use of the gnustep
 make package facilities to control dependencies etc.
 
-Normally each test is built and run by generating a makefile in the directory
-containing the test.  This makefile uses the standard conventions of including
+Normally the tests in a directory are built run usng a makefile generated in
+the directory.  This makefile uses the standard conventions of including
 GNUmakefile.preamble before test-tool.make and including GNUmakefile.postamble
 after test-tool.make, which gives you a high degree of control over how the
 tests in the directory are built.
 
 In addition to the preamble/postamble mechanism, the file ../GNUmakefile.super
 is included at the start of the generated makefile (if it exists).  This allows
-all the tests in a suite to use a common makefile fragment which can (for
-instance) build common resources before any tests are run.
+all the tests in a suite to use a common makefile fragment to provide
+information for all the testsuite.
 
-For total control, the framework checks to see if a 'GNUmakefile.template' file
-exists in the directory, and if it does it uses that file as the template to
-build the tests rather than using its own make file. This template makefile
-should use @TESTNAME@ where it wants the name of the test to be built/run,
-@INCLUDEDIR@ where it wants the name of the include directory for test
-framework headers, @FILENAME@ where it wants the name of the source file,
-and @FAILFAST@ where it wants the '-DFAILFAST=1' to be substituted (if
-gnustep-test was invoked with the --failfast option).
-The GNUmakefile.template script should build the test named @TESTNAME@ when
-it is invoked without a target, but it should also implement a 'test' target
-to run the most recently built test and a 'clean' target to clean up after
-all tests.
-
-You may also specify a GNUmakefile.tests in a project level directory (ie one
-containing subdirectories of tests), and that makefile will be executed when
-you run tests on the project.
-
-NB. When you supply custom makefile fragments which build helper programs etc,
-please remember to add an 'after-clean::' target in the makefile to clean up
-your custom files when gnustep-tests is run with the --clean option.
+For total control, the framework checks to see if a 'GNUmakefile.tests' file
+exists in the directory, and if it does it uses that file as a template to
+create the GNUmakefile rather than using its own make file.
+This template makefile may use @TESTNAMES@ where it wants a list of the
+tests to be run, and @TESTRULES@ where it wants the rules to build the
+tests to be included.
+It should also use @GSTESTFLAGS@ where it wants additions flags to tell
+the compiler about the test framework to be substituted.
+The GNUmakefile.tests script should build all the tests when it is
+invoked without a target, and it should also have a 'clean' target to
+clean up after all tests.
 
 
 Ignoring directories
